Checkpoint before assistant change: Fix header element alignment and styling

--- a/static/css/display.css
+++ b/static/css/display.css
@@ -38,11 +38,12 @@
 
 .station-icon {
     display: inline-block;
-    width: 24px;
-    height: 24px;
+    width: 10rem;
+    height: 10rem;
     background-image: url('/static/images/Type_Standard_Brand_GO_State_Black_dmvcea (1).svg');
     background-size: contain;
     background-repeat: no-repeat;
+    filter: invert(100%);
 }
 
 .station-name {
@@ -52,8 +53,8 @@
 }
 
 .time {
-    background: #ff0000; /* Fixed missing semicolon */
-    font-size: 2rem;
+    background: #000000; /* Fixed missing semicolon */
+    font-size: 3rem;
     font-weight: bold;
 }
 
